<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_MpsFaultSeverity" Id="{b03775f8-4791-41ad-9231-833a58cb40f0}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_MpsFaultSeverity :
(
	NoFault := 0,
	StandbyFault := 1,
	HVFault := 2,
	RFFault := 3,
	BeamFault := 4
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>