<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_MpsWarning" Id="{02622a6e-9a60-4136-8e8e-a00a9947452d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_MpsWarning :
(
	NoWarning := 0,
	InvalidStateRequested := 1,
	ManualModeUnreachable := 2,
	AutomaticModeUnreachable := 3
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>